--- a/index.html
+++ b/index.html
@@ -45,13 +45,46 @@
             </div>
             <div class="our-features">
 
-                <h3 class="feture-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span> of Our</span> 
+                <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span> of Our</span> 
                     <span class="text-primary">Features</span> </h3>
                 <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button></div>
 
             </div>
         </section>
+        <!-- features we'll love -->
+         <section>
+
+         </section>
+         <!-- some facts -->
+          <section class="some-facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container display-flex">
+                <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact-card display-flex">
+                   <div> <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number text-gray">54</h4>
+                    <h5 class="fact-name text-light-gray">Awards Winnings</h5></div>
+                </div>
+                <div class="fact-card display-flex">
+                  <div><img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number text-gray">1458</h4>
+                    <h5 class="fact-name text-light-gray">Project Finished </h5></div>  
+                </div>
+                <div class="fact-card display-flex">
+                    <div><img src="images/icons/customers.png " alt="" class="fact-icon">
+                        <h4 class="fact-number text-gray">590</h4>
+                        <h5 class="fact-name text-light-gray">Clients Worked</h5></div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div><img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number text-gray">590</h4>
+                        <h5 class="fact-name text-light-gray">Clients Worked</h5></div>
+                </div>
+            </div>
+
+          </section>
       
 
     </main>
