--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
 
     </main>
     <footer>
+        <div class="footer"> <p class="footer-description">All rights reserved copyright@2023 startup landing page design</p></div>
+      
 
 
     </footer>    
